<resources>
    <string name="app_name">TaskApp</string>
    <string name="appTitle">MVVM Simple Sample</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email / Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_delete">Delete Task</string>
    <string name="action_add">Add Task</string>
    <string name="action_update">Update Task</string>
    <string name="action_logout">Logout and close app</string>
    <string name="welcome">"Welcome to TaskApp!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >=5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_home">Home</string>
    <string name="cd_home">Home</string>
    <string name="title_list">Tasks</string>
    <string name="cd_list">List</string>
    <string name="title_add_task">Add Tasks</string>
    <string name="cd_add_task">Add Task</string>
    <string name="title_register">Register</string>
    <string name="cd_form">Form</string>
    <string name="title_about">About</string>
    <string name="title_task">Task</string>
    <string name="task_title">Title:</string>
    <string name="task_notes">Notes:</string>
    <string name="task_priority">Priority:</string>
    <string name="dialog_dialog">Are you sure?</string>
    <string name="edit_task_title">Title</string>
    <string name="edit_task_note">Notes</string>
    <string name="edit_due_date">Due Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>