<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskNav"
    app:startDestination="@id/taskListScreen">

    <fragment
        android:id="@+id/taskListScreen"
        android:name="edu.mike.frontend.taskapp.view.task.TaskListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_task_list">
        <action
            android:id="@+id/action_taskListScreen_to_taskScreen"
            app:destination="@id/taskViewScreen" />
    </fragment>
    <fragment
        android:id="@+id/taskViewScreen"
        android:name="edu.mike.frontend.taskapp.view.task.TaskViewFragment"
        android:label="@string/title_task"
        tools:layout="@layout/fragment_task_view" >
        <action
            android:id="@+id/action_taskScreen_to_taskUpdate"
            app:destination="@id/taskUpdateScreen" />
    </fragment>
    <fragment
        android:id="@+id/taskUpdateScreen"
        android:name="edu.mike.frontend.taskapp.view.task.TaskUpdateFragment"
        android:label="@string/action_update"
        tools:layout="@layout/fragment_task_update">
        <action
            android:id="@+id/action_taskUpdateScreen_to_taskListScreen2"
            app:destination="@id/taskListScreen"/>
    </fragment>
</navigation>