<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/editTextTaskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                android:minHeight="48dp"
                android:hint="@string/edit_task_title"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextTaskNotes"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:inputType="textLongMessage"
                android:hint="@string/edit_task_note"
                android:textAlignment="textStart"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:text="@string/task_priority"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp" />

            <EditText
                android:id="@+id/textDueDate"
                android:hint="@string/edit_due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>